# codeagentd

./: .env.example  .gitignore  Cargo.toml  README.md  context-about-codeagentd.md
.codeagentd/: settings.toml.example
src/: cli.rs  compile_db.rs  config.rs  daemon.rs  local_peer.rs  main.rs  process_util.rs  state.rs  tree_sitter.rs  workspace.rs
src/agent/: build.rs  mod.rs  preamble.rs
src/api/: admin.rs  chat.rs  health.rs  mod.rs
src/mcp/: bootstrap.rs  mod.rs
web/: index.html
